<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/relative_view_in_cardview12"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@drawable/gradient_for_category_cardlayout">


                <TextView
                    android:id="@+id/modelTitleTv"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/botanical_name"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#1DF606"
                    android:fontFamily="@font/coming_soon"/>

                <ImageView
                    android:id="@+id/modelImageIv"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:layout_below="@+id/modelTitleTv"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="7dp"
                    android:contentDescription="@string/image_of_the_plant"
                    android:text="@string/sample_description"
                    android:layout_alignParentRight="true"/>


                <TextView

                    android:id="@+id/commonname_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/modelTitleTv"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/modelImageIv"
                    android:text="COMMON NAME"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/common_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/commonname_title"
                    android:layout_marginTop="-1dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/modelImageIv"
                    android:fontFamily="@font/coming_soon"
                    android:text="@string/common_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>


                <TextView

                    android:id="@+id/familytitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/common_name"
                    android:layout_marginTop="23dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/modelImageIv"
                    android:text="FAMILY"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/familytitle"
                    android:layout_marginTop="-1dp"
                    android:text="@string/family"
                    android:layout_toLeftOf="@+id/modelImageIv"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/coming_soon"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/uses_or_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/family"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="4dp"
                    android:text="@string/uses_or_type"
                    android:layout_marginTop="150dp"/>

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/uses_or_type"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="-14dp"
                    android:text="@string/origin" />

                <TextView
                    android:id="@+id/method_of_propagation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/origin"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/method_of_propagation" />

                <TextView
                    android:id="@+id/special_advantage_or_disadvantage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/method_of_propagation"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-7dp"
                    android:text="@string/special_advantage_or_disadvantage" />

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/special_advantage_or_disadvantage"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="-3dp"
                    android:text="@string/condition" />

                <TextView
                    android:id="@+id/common_diseases_and_infection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/condition"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/common_diseases_and_infection" />

                <TextView
                    android:id="@+id/modelDescrTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/common_diseases_and_infection"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/plant_description" />



                <TextView
                    android:id="@+id/pronouncebotanicalname"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/modelDescrTv"
                    android:layout_marginTop="-1dp"
                    android:text="@string/pronounce_botanical_name" />

                <TextView
                    android:id="@+id/serialnumber"
                    android:layout_width="36dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="290dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/modelDescrTv"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>