<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DetailedInfomationOfPlants">

    <ScrollView
        android:id="@+id/scrowviewindetailedpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_for_category_cardlayout">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/gradient_for_category_cardlayout">


            <TextView
                android:id="@+id/detailmodelTitleTv"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="7dp"
                android:text="@string/botanical_name"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textColor="@android:color/holo_green_light"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/detailprouncebotanicalname"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailmodelTitleTv"
                android:layout_alignParentStart="true"
                android:layout_marginStart="54dp"
                android:layout_marginTop="0dp"
                android:text="@string/pronounce_botanical_name"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/common_name_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/detailprouncebotanicalname"
                android:layout_marginTop="19dp"
                android:text="COMMON NAME"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView

                android:id="@+id/detailcommon_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_name"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_below="@+id/common_name_title"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>

            <ImageView
                android:layout_below="@+id/detailcommon_name"
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/family_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="FAMILY"
                android:layout_below="@+id/detail_image"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailfamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/family_title"
                android:layout_alignParentEnd="true"
                android:textSize="17dp"
                android:text="@string/family"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/method_of_propagation_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="METHOD OF PROPAGATION"
                android:layout_below="@+id/detailfamily"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailmethod_of_propagation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/method_of_propagation_title"
                android:layout_alignParentEnd="true"
                android:text="@string/method_of_propagation"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/uses_or_types_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="USES OR TYPE"
                android:layout_below="@+id/detailmethod_of_propagation"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailuses_or_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uses_or_types_title"
                android:layout_alignParentEnd="true"
                android:text="@string/uses_or_type"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/condition_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="CONDITION"
                android:layout_below="@+id/detailuses_or_type"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailcondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/condition_title"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:text="@string/condition"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/origin_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="ORIGIN"
                android:layout_below="@+id/detailcondition"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailorigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/origin_title"
                android:layout_alignParentEnd="true"
                android:text="@string/origin"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>


            <TextView
                android:id="@+id/special_advantage_or_disad_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="SPECIAL ADVANTAGE OR DISADVANTAGE"
                android:layout_below="@+id/detailorigin"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

            <TextView
                android:id="@+id/detailspecial_advantage_or_disadvantage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/special_advantage_or_disad_title"
                android:layout_alignParentEnd="true"
                android:text="@string/special_advantage_or_disadvantage"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>



            <TextView
                android:id="@+id/common_diseases_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="COMMON DISEASES AND INFECTIONS"
                android:layout_below="@+id/detailspecial_advantage_or_disadvantage"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>
            <TextView
                android:id="@+id/dcommondiseasesandinfection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/common_diseases_title"
                android:text="@string/common_diseases_and_infection"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>


            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="OTHER DESCRIPTIONS"
                android:layout_below="@+id/dcommondiseasesandinfection"
                android:layout_marginTop="21dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>


            <TextView
                android:id="@+id/detailmodelDescrTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_title"
                android:text="@string/plant_description"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/coming_soon"/>


            <TextView
                android:id="@+id/detailedserialnumber"
                android:layout_width="36dp"
                android:layout_height="25dp"
                android:layout_marginLeft="291dp"
                android:textColor="#1A2D74"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/coming_soon"/>

            <Button
                android:id="@+id/gotohome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailmodelDescrTv"
                android:layout_marginTop="13dp"
                android:background="#FF090D0D"
                android:text="Exit"
                android:textSize="10dp"
                android:textColor="#D50000"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/coming_soon"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>